<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>org.gosu-lang.gosu</groupId>
    <artifactId>gosu-parent</artifactId>
    <version>1.18.4</version>
    <relativePath>../gosu-parent/pom.xml</relativePath>
  </parent>
  <modelVersion>4.0.0</modelVersion>

  <artifactId>gosu-core-api</artifactId>

  <name>Gosu :: Core API</name>

  <properties>
    <generated.version.dir>${project.build.directory}/generated-sources/version</generated.version.dir>
    <gosu.version.properties>${generated.version.dir}/gw/lang/gosu-version.properties</gosu.version.properties>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.gosu-lang.gosu.managed</groupId>
      <artifactId>gw-asm-all</artifactId>
      <version>9.7</version>
    </dependency>
    <dependency>
      <groupId>org.gosu-lang.gosu.managed</groupId>
      <artifactId>gw-jcommander</artifactId>
      <version>1.72</version>
    </dependency>
    <dependency>
      <groupId>systems.manifold</groupId>
      <artifactId>manifold</artifactId>
      <version>2024.1.38</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <source>11</source>
          <target>11</target>
          <encoding>UTF-8</encoding>
          <compilerArgs>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
            <arg>--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED</arg>
          </compilerArgs>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>parse-version</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>parse-version</goal>
            </goals>
            <configuration>
              <propertyPrefix>gosu</propertyPrefix>
              <versionString>${project.version}</versionString>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>1.7</version>
        <executions>
          <execution>
            <id>generate-gosu-version</id>
            <phase>generate-sources</phase>
            <configuration>
              <target>
                <echo message="writing POM version to ${gosu.version.properties}" />
                <echo message="gosu.version.major=${gosu.majorVersion}${line.separator}" file="${gosu.version.properties}" />
                <echo message="gosu.version.minor=${gosu.minorVersion}${line.separator}" file="${gosu.version.properties}" append="true" />
                <echo message="gosu.version.incremental=${gosu.incrementalVersion}${line.separator}" file="${gosu.version.properties}" append="true" />
                <echo message="gosu.version.build=${gosu.buildNumber}${line.separator}" file="${gosu.version.properties}" append="true" />
                <echo message="gosu.version.qualifier=${gosu.qualifier}${line.separator}" file="${gosu.version.properties}" append="true" />
              </target>
            </configuration>
            <goals>
              <goal>run</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <archive>
            <manifestEntries>
              <Contains-Sources>gs,gsx</Contains-Sources>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
